<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<item android:title="@string/Game" android:id="@+id/game" android:icon="@android:drawable/ic_menu_manage" android:showAsAction="ifRoom|withText"><menu>
	<item android:title="@string/New_game" android:id="@+id/newgame" android:alphabeticShortcut="n" android:icon="@android:drawable/ic_menu_add"/>
	<item android:title="@string/Restart" android:id="@+id/restart" android:alphabeticShortcut="t" android:icon="@android:drawable/ic_menu_delete"/>
	<item android:title="@string/Specific_" android:id="@+id/specific" android:alphabeticShortcut="p"/>
	<item android:title="@string/Random_seed_" android:id="@+id/seed" android:alphabeticShortcut="x"/>
	<item android:title="@string/Load_" android:id="@+id/load" android:alphabeticShortcut="y" android:icon="@android:drawable/ic_menu_upload"/>
	<item android:title="@string/Save_" android:id="@+id/save" android:alphabeticShortcut="w" android:icon="@android:drawable/ic_menu_save"/>
</menu></item>
<item android:title="@string/Type" android:id="@+id/type" android:enabled="false" android:icon="@android:drawable/ic_menu_edit" android:showAsAction="ifRoom|withText"><menu>
	<group android:id="@+id/typeGroup" android:checkableBehavior="single">
		<item android:title="@string/Custom_" android:id="@+id/custom" android:visible="false" android:checkable="true" android:menuCategory="secondary" android:icon="@android:drawable/ic_menu_edit"/>
	</group>
</menu></item>
<item android:title="@string/Other_game" android:id="@+id/other" android:alphabeticShortcut="o" android:icon="@android:drawable/ic_menu_gallery"/>
<item android:title="@string/Settings" android:id="@+id/settings" android:icon="@android:drawable/ic_menu_preferences" android:showAsAction="ifRoom"/>
<item android:title="@string/Solve" android:id="@+id/solve" android:enabled="false" android:icon="@android:drawable/ic_menu_directions" android:showAsAction="ifRoom"/>
<item android:title="@string/Undo" android:id="@+id/undo" android:alphabeticShortcut="u" android:icon="@drawable/ic_menu_undo" android:visible="false" android:showAsAction="always"/>
<item android:title="@string/Redo" android:id="@+id/redo" android:alphabeticShortcut="r" android:icon="@drawable/ic_menu_redo" android:visible="false" android:showAsAction="always"/>
<item android:title="@string/Help" android:id="@+id/help" android:icon="@android:drawable/ic_menu_help" android:showAsAction="ifRoom"><menu>
	<item android:title="@string/Contents" android:id="@+id/contents"/>
	<item android:title="@string/On_this_game" android:id="@+id/thisgame"/>
	<item android:title="@string/Project_website" android:id="@+id/website"/>
	<item android:title="@string/Email_developer" android:id="@+id/email"/>
	<item android:title="@string/About" android:id="@+id/about"/>
</menu></item>
</menu>
