<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/mainLayout"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical" >

	<TextView
		android:id="@+id/txtView"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_alignParentRight="true"
		android:layout_alignParentTop="true"
		android:padding="5sp"
		android:text="@string/crashed"
		android:textSize="18sp" />

	<CheckBox
		android:id="@+id/forget"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_below="@+id/txtView"
		android:text="@string/clear_state" />

	<Button
		android:id="@+id/report"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_below="@+id/forget"
		android:text="@string/report"
		android:paddingLeft="30sp"
		android:paddingRight="30sp"/>

	<Button
		android:id="@+id/close"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignBaseline="@+id/report"
		android:layout_alignBottom="@+id/report"
		android:layout_toRightOf="@+id/report"
		android:text="@string/close"
		android:paddingLeft="30sp"
		android:paddingRight="30sp"/>

</RelativeLayout>